# CC_P3KA_Plugin

./: CMakeLists.txt  LoadP3KAPlugin.cpp  LoadP3KAPlugin.h  LoadP3KAPlugin.qrc  README.md  info.json  p3ka_res.json
